# Gasg

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: color.hpp  painter.hpp  point.h  rectangle.h  screen.hpp  shader.h  surface.h  texture.hpp
src/: point.cpp  rectangle.cpp  shader.cpp  texture.cpp
